<resources>
    <string name="app_name">Jankenpon</string>

    <string name="activity_login_input_player">Nome do Jogador</string>
    <string name="activity_login_button_star">Iniciar Jogada</string>
    <string name="activity_login_button_ranking">Ver Ranking</string>
    <string name="activity_login_error">Erro ao buscar nome do oponente</string>

    <string name="activity_start_game_name_player">Olá, %s</string>
    <string name="activity_start_game_name_opponent">Seu oponente, %s escolheu:</string>
    <string name="activity_start_game_options">Escolha uma das opções abaixo:</string>
    <string name="activity_start_game_message_victory">Você Ganhou</string>
    <string name="activity_start_game_message_defeat">Você perdeu</string>
    <string name="activity_start_game_message_draw">Quase lá</string>
    <string name="activity_start_game_message_error">Ocorreu um erro ao executar a partida, tente novamente!</string>

    <string name="activity_ranking_opponent_name">Ranking dos jogadores:</string>
    <string name="activity_ranking_points">Pontos</string>
    <string name="activity_back_ranking">Voltar</string>
    <string name="activity_start_game_message_final_rounds">Final da Partida</string>
    <string name="stop">Parar</string>
    <string name="exit">Sair</string>
    <string name="restart">Começar de novo</string>
    <string name="try_again">Jogar novamente</string>
    <string name="no_victories">Nenhuma vitória</string>
    <string name="rankin">Ranking</string>
    <string name="choose_your_option">Faça sua escolha:</string>
    <plurals name="player_score_count">
        <item quantity="one">1 vitória</item>
        <item quantity="other">%d vitórias</item>
    </plurals>

</resources>
