<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_lista_produtos_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:paddingHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/bt_ranking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_activity_points"
        tools:listitem="@layout/view_ranking_player_item" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/opponent_name_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="48dp"
        android:text="@string/activity_ranking_opponent_name"
        app:layout_constraintEnd_toStartOf="@+id/text_activity_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_activity_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingEnd="48dp"
        android:text="@string/activity_ranking_points"
        app:layout_constraintBottom_toBottomOf="@+id/opponent_name_item"
        app:layout_constraintBottom_toTopOf="@+id/activity_lista_produtos_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/opponent_name_item"
        app:layout_constraintTop_toBottomOf="@+id/opponent_name_item"
        app:layout_constraintTop_toTopOf="@+id/opponent_name_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_ranking"
        style="@style/CustomMaterialButton.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/activity_back_ranking"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_lista_produtos_recyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>
